# libjstruct

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
include/jstruct/: jstruct.h  jstruct_parse.h  jstruct_serialize.h
src/: parse.c  serialize.c
tests/: CMakeLists.txt  test_parse_array.c  test_parse_boolean.c  test_parse_f32.c  test_parse_f64.c  test_parse_i32.c  test_parse_i64.c  test_parse_i8.c  test_parse_object.c  test_parse_string.c  test_parse_u16.c  test_parse_u32.c  test_parse_u64.c  test_parse_u8.c  test_serialize_array.c  test_serialize_boolean.c  test_serialize_f64.c  test_serialize_i32.c  test_serialize_object.c  test_serialize_string.c  test_serialize_u32.c
